<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_prediction"
        android:icon="@drawable/baseline_prediction_24"
        android:title="@string/title_prediction"/>

    <item
        android:id="@+id/placeholder"
        android:title=""/>

    <item
        android:id="@+id/navigation_financial_freedom"
        android:icon="@drawable/ic_calculator"
        android:title="@string/title_financial_freedom"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile"/>

</menu>
