<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <!-- Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_stock_prediction"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            android:textColor="#000000" />

        <!-- Input: Stock Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_stock_name"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/input_stock_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_enter_stock_name"
            android:inputType="text"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="16dp"
            android:autofillHints="name"/>

        <!-- Input: Prediction Period -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_prediction_period_days"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/input_prediction_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_enter_period_in_days"
            android:inputType="number"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="24dp"
            android:autofillHints="number"/>

        <!-- Submit Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_predict"
            android:layout_marginTop="8dp"
            app:cornerRadius="50dp"
            android:backgroundTint="#6200EE"
            android:textColor="#FFFFFF"
            android:padding="16dp"
            android:textStyle="bold" />

        <!-- List of Stock Predictions -->
        <TextView
            android:id="@+id/stock_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_list_stock_predictions"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:textColor="#000000"/>

        <!-- RecyclerView for displaying stocks -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_stocks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</ScrollView>
