<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_prediction"
        android:name="com.example.myapplication.ui.prediction.PredictionFragment"
        android:label="@string/title_prediction"
        tools:layout="@layout/fragment_prediction" />

    <fragment
        android:id="@+id/navigation_financial_freedom"
        android:name="com.example.myapplication.ui.financial.FinancialFreedomFragment"
        android:label="@string/title_financial_freedom"
        tools:layout="@layout/fragment_financial_freedom" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.myapplication.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
